fixed that the action buttons in the card were not centered perfectly, now looks better

--- a/src/card/cardsActionsButtons/cardActionsButtons.css
+++ b/src/card/cardsActionsButtons/cardActionsButtons.css
@@ -1,7 +1,8 @@
 .addToPracticeAction {
   width: fit-content;
   cursor: pointer;
-  margin-right: 10px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .cardActionsButton {
